# CMakeList.txt : CMake project for morse_decoder, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (morse_decoder "morse_decoder.cpp" "morse_decoder.h")

# TODO: Add tests and install targets if needed.
